p2/confs/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment  # deployment name 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1 # deployment label found the pod
  template:
    metadata:
      labels:
        app: app1 # pod label tag prefix
    spec:
      containers:
        - name: app1
          image: paulbouwer/hello-kubernetes:1.10.1
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: app1-service  # service name
spec:
  type: ClusterIP #default
  selector:
    app: app1 # Service label forward traffic to the pods
  ports:
    - port: 80
      targetPort: 8080
