p2/confs/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment  # deployment name 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2 # deployment label
  template:
    metadata:
      labels:
        app: app2 # pod label
    spec:
      containers:
        - name: app2
          image: paulbouwer/hello-kubernetes:1.10.1
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: app2-service  # service name
spec:
  type: ClusterIP #default
  selector:
    app: app2 # Service label
  ports:
    - port: 80
      targetPort: 8080
