p2/confs/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment  # deployment name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3 # deployment label found the pod
  template:
    metadata:
      labels:
        app: app3 # pod label tag prefix
    spec:
      containers:
        - name: app3
          image: paulbouwer/hello-kubernetes:1.10.1
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: app3-service  # service name
spec:
  type: ClusterIP #default
  selector:
    app: app3 # Service label forward traffic to the pods
  ports:
    - port: 80
      targetPort: 8080
