p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
spec:
  rules:
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Prefix # Match all paths
            backend:
              service:
                name: app1-service
                port:
                  number: 80

    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix # Match all paths
            backend:
              service:
                name: app2-service
                port:
                  number: 80

    - http: # default host
        paths:
          - path: /
            pathType: Prefix # Match all paths
            backend:
              service:
                name: app3-service
                port:
                  number: 80
